<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_fps_plugin</name>
  <version>0.0.0</version>
  <description>Scan to BIM</description>
  <maintainer email="mfallon@navlive.co.uk">Maurice Fallon</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz2</depend>
  <build_depend>rviz_assimp_vendor</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
